made ObjectToInsertClass ond autoparsing